fix missing margin on toast

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -579,6 +579,7 @@ hr {
 }
 
 #toast.htmx-request.htmx-indicator {
+    top: 85%;
     opacity: 1;
 }
 
